// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FavoriteSnapshot component should fully render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorite
    downvotes={1}
    fav=""
    id={1}
    upvotes={1}
    userId={undefined}
    vote={3}
    voteRecipe={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        " ",
        <i
          className="fa fa-heart"
        />,
      ],
      "className": "btn btn-favorited",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      undefined,
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fa fa-heart",
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          " ",
          <i
            className="fa fa-heart"
          />,
        ],
        "className": "btn btn-favorited",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        undefined,
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fa fa-heart",
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FavoriteSnapshot component should fully render if fav is false 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorite
    downvotes={1}
    fav="false"
    id={1}
    upvotes={1}
    userId={undefined}
    vote={3}
    voteRecipe={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        " ",
        <i
          className="fa fa-heart"
        />,
      ],
      "className": "btn btn-favorited",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      undefined,
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fa fa-heart",
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          " ",
          <i
            className="fa fa-heart"
          />,
        ],
        "className": "btn btn-favorited",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        undefined,
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fa fa-heart",
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`FavoriteSnapshot component should fully render if fav is true 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Favorite
    downvotes={1}
    fav="true"
    id={1}
    upvotes={1}
    userId={undefined}
    vote={3}
    voteRecipe={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        " ",
        <i
          className="fa fa-heart favorited"
        />,
      ],
      "className": "btn btn-favorited",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Array [
      undefined,
      " ",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "fa fa-heart favorited",
        },
        "ref": null,
        "rendered": null,
        "type": "i",
      },
    ],
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          " ",
          <i
            className="fa fa-heart favorited"
          />,
        ],
        "className": "btn btn-favorited",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Array [
        undefined,
        " ",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "fa fa-heart favorited",
          },
          "ref": null,
          "rendered": null,
          "type": "i",
        },
      ],
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ViewRecipe component Snapshot ViewRecipe should fully render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViewRecipe
    details={undefined}
    image={undefined}
    title={undefined}
    userId={undefined}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Loading...",
    },
    "ref": null,
    "rendered": "Loading...",
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Loading...",
      },
      "ref": null,
      "rendered": "Loading...",
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ViewRecipe component Snapshot component should fully render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViewRecipe
    details=""
    favoriteRecipe={[MockFunction]}
    id=""
    image=""
    recipe={Object {}}
    title=""
    userId={1}
    voteRecipe={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="text-left-buttons btn-buttons"
        >
          <BtnHome />
          <Connect(authRecipeButtons(BtnAdd)) />
          <BtnCatalog />
          <Connect(authRecipeButtons(BtnManageRecipes)) />
          <Connect(authRecipeButtons(BtnFavorites)) />
          <Connect(authRecipeButtons(BtnProfile)) />
        </div>,
        <div
          className="row"
        >
          <div
            className="col-md-12 latest-recipes"
          >
            <div
              id="recipe-display"
            >
              <h2
                className="recipe-title r-d-titles"
              />
              <div
                id="recipe-content"
              >
                <div
                  id="img-ing"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col-md-8"
                    >
                      <img
                        alt=""
                        src={undefined}
                      />
                    </div>
                    <div
                      className="col-md-4"
                    >
                      <div
                        className="r-d-titles title-ing"
                      >
                        <b>
                          Ingredients:
                        </b>
                      </div>
                      <div
                        className="ing-body"
                      >
                        <p />
                      </div>
                      <div
                        id="popular-votes"
                      >
                        <li>
                          <Connect(authDeleteRecipe(Favorite))
                            fav={undefined}
                            favoriteRecipe={[MockFunction]}
                            favorited={undefined}
                            id=""
                            userId={1}
                          />
                        </li>
                        <Connect(authDeleteRecipe(Vote))
                          downvotes={undefined}
                          id=""
                          upvotes={undefined}
                          vote={undefined}
                          voteRecipe={[MockFunction]}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="details-recipe"
                >
                  <div
                    className="r-d-titles"
                  >
                    <b>
                      Recipe Details
                    </b>
                  </div>
                  <p />
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
      "className": "container-fluid",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <BtnHome />,
            <Connect(authRecipeButtons(BtnAdd)) />,
            <BtnCatalog />,
            <Connect(authRecipeButtons(BtnManageRecipes)) />,
            <Connect(authRecipeButtons(BtnFavorites)) />,
            <Connect(authRecipeButtons(BtnProfile)) />,
            false,
          ],
          "className": "text-left-buttons btn-buttons",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="col-md-12 latest-recipes"
          >
            <div
              id="recipe-display"
            >
              <h2
                className="recipe-title r-d-titles"
              />
              <div
                id="recipe-content"
              >
                <div
                  id="img-ing"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col-md-8"
                    >
                      <img
                        alt=""
                        src={undefined}
                      />
                    </div>
                    <div
                      className="col-md-4"
                    >
                      <div
                        className="r-d-titles title-ing"
                      >
                        <b>
                          Ingredients:
                        </b>
                      </div>
                      <div
                        className="ing-body"
                      >
                        <p />
                      </div>
                      <div
                        id="popular-votes"
                      >
                        <li>
                          <Connect(authDeleteRecipe(Favorite))
                            fav={undefined}
                            favoriteRecipe={[MockFunction]}
                            favorited={undefined}
                            id=""
                            userId={1}
                          />
                        </li>
                        <Connect(authDeleteRecipe(Vote))
                          downvotes={undefined}
                          id=""
                          upvotes={undefined}
                          vote={undefined}
                          voteRecipe={[MockFunction]}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="details-recipe"
                >
                  <div
                    className="r-d-titles"
                  >
                    <b>
                      Recipe Details
                    </b>
                  </div>
                  <p />
                </div>
              </div>
            </div>
          </div>,
          "className": "row",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              id="recipe-display"
            >
              <h2
                className="recipe-title r-d-titles"
              />
              <div
                id="recipe-content"
              >
                <div
                  id="img-ing"
                >
                  <div
                    className="row"
                  >
                    <div
                      className="col-md-8"
                    >
                      <img
                        alt=""
                        src={undefined}
                      />
                    </div>
                    <div
                      className="col-md-4"
                    >
                      <div
                        className="r-d-titles title-ing"
                      >
                        <b>
                          Ingredients:
                        </b>
                      </div>
                      <div
                        className="ing-body"
                      >
                        <p />
                      </div>
                      <div
                        id="popular-votes"
                      >
                        <li>
                          <Connect(authDeleteRecipe(Favorite))
                            fav={undefined}
                            favoriteRecipe={[MockFunction]}
                            favorited={undefined}
                            id=""
                            userId={1}
                          />
                        </li>
                        <Connect(authDeleteRecipe(Vote))
                          downvotes={undefined}
                          id=""
                          upvotes={undefined}
                          vote={undefined}
                          voteRecipe={[MockFunction]}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="details-recipe"
                >
                  <div
                    className="r-d-titles"
                  >
                    <b>
                      Recipe Details
                    </b>
                  </div>
                  <p />
                </div>
              </div>
            </div>,
            "className": "col-md-12 latest-recipes",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="recipe-title r-d-titles"
                />,
                <div
                  id="recipe-content"
                >
                  <div
                    id="img-ing"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col-md-8"
                      >
                        <img
                          alt=""
                          src={undefined}
                        />
                      </div>
                      <div
                        className="col-md-4"
                      >
                        <div
                          className="r-d-titles title-ing"
                        >
                          <b>
                            Ingredients:
                          </b>
                        </div>
                        <div
                          className="ing-body"
                        >
                          <p />
                        </div>
                        <div
                          id="popular-votes"
                        >
                          <li>
                            <Connect(authDeleteRecipe(Favorite))
                              fav={undefined}
                              favoriteRecipe={[MockFunction]}
                              favorited={undefined}
                              id=""
                              userId={1}
                            />
                          </li>
                          <Connect(authDeleteRecipe(Vote))
                            downvotes={undefined}
                            id=""
                            upvotes={undefined}
                            vote={undefined}
                            voteRecipe={[MockFunction]}
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="details-recipe"
                  >
                    <div
                      className="r-d-titles"
                    >
                      <b>
                        Recipe Details
                      </b>
                    </div>
                    <p />
                  </div>
                </div>,
              ],
              "id": "recipe-display",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "recipe-title r-d-titles",
                },
                "ref": null,
                "rendered": null,
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      id="img-ing"
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="col-md-8"
                        >
                          <img
                            alt=""
                            src={undefined}
                          />
                        </div>
                        <div
                          className="col-md-4"
                        >
                          <div
                            className="r-d-titles title-ing"
                          >
                            <b>
                              Ingredients:
                            </b>
                          </div>
                          <div
                            className="ing-body"
                          >
                            <p />
                          </div>
                          <div
                            id="popular-votes"
                          >
                            <li>
                              <Connect(authDeleteRecipe(Favorite))
                                fav={undefined}
                                favoriteRecipe={[MockFunction]}
                                favorited={undefined}
                                id=""
                                userId={1}
                              />
                            </li>
                            <Connect(authDeleteRecipe(Vote))
                              downvotes={undefined}
                              id=""
                              upvotes={undefined}
                              vote={undefined}
                              voteRecipe={[MockFunction]}
                            />
                          </div>
                        </div>
                      </div>
                    </div>,
                    <div
                      className="details-recipe"
                    >
                      <div
                        className="r-d-titles"
                      >
                        <b>
                          Recipe Details
                        </b>
                      </div>
                      <p />
                    </div>,
                  ],
                  "id": "recipe-content",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="row"
                      >
                        <div
                          className="col-md-8"
                        >
                          <img
                            alt=""
                            src={undefined}
                          />
                        </div>
                        <div
                          className="col-md-4"
                        >
                          <div
                            className="r-d-titles title-ing"
                          >
                            <b>
                              Ingredients:
                            </b>
                          </div>
                          <div
                            className="ing-body"
                          >
                            <p />
                          </div>
                          <div
                            id="popular-votes"
                          >
                            <li>
                              <Connect(authDeleteRecipe(Favorite))
                                fav={undefined}
                                favoriteRecipe={[MockFunction]}
                                favorited={undefined}
                                id=""
                                userId={1}
                              />
                            </li>
                            <Connect(authDeleteRecipe(Vote))
                              downvotes={undefined}
                              id=""
                              upvotes={undefined}
                              vote={undefined}
                              voteRecipe={[MockFunction]}
                            />
                          </div>
                        </div>
                      </div>,
                      "id": "img-ing",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <div
                            className="col-md-8"
                          >
                            <img
                              alt=""
                              src={undefined}
                            />
                          </div>,
                          <div
                            className="col-md-4"
                          >
                            <div
                              className="r-d-titles title-ing"
                            >
                              <b>
                                Ingredients:
                              </b>
                            </div>
                            <div
                              className="ing-body"
                            >
                              <p />
                            </div>
                            <div
                              id="popular-votes"
                            >
                              <li>
                                <Connect(authDeleteRecipe(Favorite))
                                  fav={undefined}
                                  favoriteRecipe={[MockFunction]}
                                  favorited={undefined}
                                  id=""
                                  userId={1}
                                />
                              </li>
                              <Connect(authDeleteRecipe(Vote))
                                downvotes={undefined}
                                id=""
                                upvotes={undefined}
                                vote={undefined}
                                voteRecipe={[MockFunction]}
                              />
                            </div>
                          </div>,
                        ],
                        "className": "row",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <img
                              alt=""
                              src={undefined}
                            />,
                            "className": "col-md-8",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "alt": "",
                              "src": undefined,
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "img",
                          },
                          "type": "div",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <div
                                className="r-d-titles title-ing"
                              >
                                <b>
                                  Ingredients:
                                </b>
                              </div>,
                              <div
                                className="ing-body"
                              >
                                <p />
                              </div>,
                              <div
                                id="popular-votes"
                              >
                                <li>
                                  <Connect(authDeleteRecipe(Favorite))
                                    fav={undefined}
                                    favoriteRecipe={[MockFunction]}
                                    favorited={undefined}
                                    id=""
                                    userId={1}
                                  />
                                </li>
                                <Connect(authDeleteRecipe(Vote))
                                  downvotes={undefined}
                                  id=""
                                  upvotes={undefined}
                                  vote={undefined}
                                  voteRecipe={[MockFunction]}
                                />
                              </div>,
                            ],
                            "className": "col-md-4",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": <b>
                                  Ingredients:
                                </b>,
                                "className": "r-d-titles title-ing",
                              },
                              "ref": null,
                              "rendered": Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": "Ingredients:",
                                },
                                "ref": null,
                                "rendered": "Ingredients:",
                                "type": "b",
                              },
                              "type": "div",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": <p />,
                                "className": "ing-body",
                              },
                              "ref": null,
                              "rendered": Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": undefined,
                                },
                                "ref": null,
                                "rendered": null,
                                "type": "p",
                              },
                              "type": "div",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": Array [
                                  <li>
                                    <Connect(authDeleteRecipe(Favorite))
                                      fav={undefined}
                                      favoriteRecipe={[MockFunction]}
                                      favorited={undefined}
                                      id=""
                                      userId={1}
                                    />
                                  </li>,
                                  <Connect(authDeleteRecipe(Vote))
                                    downvotes={undefined}
                                    id=""
                                    upvotes={undefined}
                                    vote={undefined}
                                    voteRecipe={[MockFunction]}
                                  />,
                                ],
                                "id": "popular-votes",
                              },
                              "ref": null,
                              "rendered": Array [
                                Object {
                                  "instance": null,
                                  "key": undefined,
                                  "nodeType": "host",
                                  "props": Object {
                                    "children": <Connect(authDeleteRecipe(Favorite))
                                      fav={undefined}
                                      favoriteRecipe={[MockFunction]}
                                      favorited={undefined}
                                      id=""
                                      userId={1}
                                    />,
                                  },
                                  "ref": null,
                                  "rendered": Object {
                                    "instance": null,
                                    "key": undefined,
                                    "nodeType": "class",
                                    "props": Object {
                                      "fav": undefined,
                                      "favoriteRecipe": [MockFunction],
                                      "favorited": undefined,
                                      "id": "",
                                      "userId": 1,
                                    },
                                    "ref": null,
                                    "rendered": null,
                                    "type": [Function],
                                  },
                                  "type": "li",
                                },
                                Object {
                                  "instance": null,
                                  "key": undefined,
                                  "nodeType": "class",
                                  "props": Object {
                                    "downvotes": undefined,
                                    "id": "",
                                    "upvotes": undefined,
                                    "vote": undefined,
                                    "voteRecipe": [MockFunction],
                                  },
                                  "ref": null,
                                  "rendered": null,
                                  "type": [Function],
                                },
                              ],
                              "type": "div",
                            },
                          ],
                          "type": "div",
                        },
                      ],
                      "type": "div",
                    },
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <div
                          className="r-d-titles"
                        >
                          <b>
                            Recipe Details
                          </b>
                        </div>,
                        <p />,
                      ],
                      "className": "details-recipe",
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <b>
                            Recipe Details
                          </b>,
                          "className": "r-d-titles",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": "Recipe Details",
                          },
                          "ref": null,
                          "rendered": "Recipe Details",
                          "type": "b",
                        },
                        "type": "div",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": undefined,
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "p",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="text-left-buttons btn-buttons"
          >
            <BtnHome />
            <Connect(authRecipeButtons(BtnAdd)) />
            <BtnCatalog />
            <Connect(authRecipeButtons(BtnManageRecipes)) />
            <Connect(authRecipeButtons(BtnFavorites)) />
            <Connect(authRecipeButtons(BtnProfile)) />
          </div>,
          <div
            className="row"
          >
            <div
              className="col-md-12 latest-recipes"
            >
              <div
                id="recipe-display"
              >
                <h2
                  className="recipe-title r-d-titles"
                />
                <div
                  id="recipe-content"
                >
                  <div
                    id="img-ing"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col-md-8"
                      >
                        <img
                          alt=""
                          src={undefined}
                        />
                      </div>
                      <div
                        className="col-md-4"
                      >
                        <div
                          className="r-d-titles title-ing"
                        >
                          <b>
                            Ingredients:
                          </b>
                        </div>
                        <div
                          className="ing-body"
                        >
                          <p />
                        </div>
                        <div
                          id="popular-votes"
                        >
                          <li>
                            <Connect(authDeleteRecipe(Favorite))
                              fav={undefined}
                              favoriteRecipe={[MockFunction]}
                              favorited={undefined}
                              id=""
                              userId={1}
                            />
                          </li>
                          <Connect(authDeleteRecipe(Vote))
                            downvotes={undefined}
                            id=""
                            upvotes={undefined}
                            vote={undefined}
                            voteRecipe={[MockFunction]}
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="details-recipe"
                  >
                    <div
                      className="r-d-titles"
                    >
                      <b>
                        Recipe Details
                      </b>
                    </div>
                    <p />
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
        "className": "container-fluid",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <BtnHome />,
              <Connect(authRecipeButtons(BtnAdd)) />,
              <BtnCatalog />,
              <Connect(authRecipeButtons(BtnManageRecipes)) />,
              <Connect(authRecipeButtons(BtnFavorites)) />,
              <Connect(authRecipeButtons(BtnProfile)) />,
              false,
            ],
            "className": "text-left-buttons btn-buttons",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            false,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="col-md-12 latest-recipes"
            >
              <div
                id="recipe-display"
              >
                <h2
                  className="recipe-title r-d-titles"
                />
                <div
                  id="recipe-content"
                >
                  <div
                    id="img-ing"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col-md-8"
                      >
                        <img
                          alt=""
                          src={undefined}
                        />
                      </div>
                      <div
                        className="col-md-4"
                      >
                        <div
                          className="r-d-titles title-ing"
                        >
                          <b>
                            Ingredients:
                          </b>
                        </div>
                        <div
                          className="ing-body"
                        >
                          <p />
                        </div>
                        <div
                          id="popular-votes"
                        >
                          <li>
                            <Connect(authDeleteRecipe(Favorite))
                              fav={undefined}
                              favoriteRecipe={[MockFunction]}
                              favorited={undefined}
                              id=""
                              userId={1}
                            />
                          </li>
                          <Connect(authDeleteRecipe(Vote))
                            downvotes={undefined}
                            id=""
                            upvotes={undefined}
                            vote={undefined}
                            voteRecipe={[MockFunction]}
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="details-recipe"
                  >
                    <div
                      className="r-d-titles"
                    >
                      <b>
                        Recipe Details
                      </b>
                    </div>
                    <p />
                  </div>
                </div>
              </div>
            </div>,
            "className": "row",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                id="recipe-display"
              >
                <h2
                  className="recipe-title r-d-titles"
                />
                <div
                  id="recipe-content"
                >
                  <div
                    id="img-ing"
                  >
                    <div
                      className="row"
                    >
                      <div
                        className="col-md-8"
                      >
                        <img
                          alt=""
                          src={undefined}
                        />
                      </div>
                      <div
                        className="col-md-4"
                      >
                        <div
                          className="r-d-titles title-ing"
                        >
                          <b>
                            Ingredients:
                          </b>
                        </div>
                        <div
                          className="ing-body"
                        >
                          <p />
                        </div>
                        <div
                          id="popular-votes"
                        >
                          <li>
                            <Connect(authDeleteRecipe(Favorite))
                              fav={undefined}
                              favoriteRecipe={[MockFunction]}
                              favorited={undefined}
                              id=""
                              userId={1}
                            />
                          </li>
                          <Connect(authDeleteRecipe(Vote))
                            downvotes={undefined}
                            id=""
                            upvotes={undefined}
                            vote={undefined}
                            voteRecipe={[MockFunction]}
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="details-recipe"
                  >
                    <div
                      className="r-d-titles"
                    >
                      <b>
                        Recipe Details
                      </b>
                    </div>
                    <p />
                  </div>
                </div>
              </div>,
              "className": "col-md-12 latest-recipes",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="recipe-title r-d-titles"
                  />,
                  <div
                    id="recipe-content"
                  >
                    <div
                      id="img-ing"
                    >
                      <div
                        className="row"
                      >
                        <div
                          className="col-md-8"
                        >
                          <img
                            alt=""
                            src={undefined}
                          />
                        </div>
                        <div
                          className="col-md-4"
                        >
                          <div
                            className="r-d-titles title-ing"
                          >
                            <b>
                              Ingredients:
                            </b>
                          </div>
                          <div
                            className="ing-body"
                          >
                            <p />
                          </div>
                          <div
                            id="popular-votes"
                          >
                            <li>
                              <Connect(authDeleteRecipe(Favorite))
                                fav={undefined}
                                favoriteRecipe={[MockFunction]}
                                favorited={undefined}
                                id=""
                                userId={1}
                              />
                            </li>
                            <Connect(authDeleteRecipe(Vote))
                              downvotes={undefined}
                              id=""
                              upvotes={undefined}
                              vote={undefined}
                              voteRecipe={[MockFunction]}
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="details-recipe"
                    >
                      <div
                        className="r-d-titles"
                      >
                        <b>
                          Recipe Details
                        </b>
                      </div>
                      <p />
                    </div>
                  </div>,
                ],
                "id": "recipe-display",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "recipe-title r-d-titles",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        id="img-ing"
                      >
                        <div
                          className="row"
                        >
                          <div
                            className="col-md-8"
                          >
                            <img
                              alt=""
                              src={undefined}
                            />
                          </div>
                          <div
                            className="col-md-4"
                          >
                            <div
                              className="r-d-titles title-ing"
                            >
                              <b>
                                Ingredients:
                              </b>
                            </div>
                            <div
                              className="ing-body"
                            >
                              <p />
                            </div>
                            <div
                              id="popular-votes"
                            >
                              <li>
                                <Connect(authDeleteRecipe(Favorite))
                                  fav={undefined}
                                  favoriteRecipe={[MockFunction]}
                                  favorited={undefined}
                                  id=""
                                  userId={1}
                                />
                              </li>
                              <Connect(authDeleteRecipe(Vote))
                                downvotes={undefined}
                                id=""
                                upvotes={undefined}
                                vote={undefined}
                                voteRecipe={[MockFunction]}
                              />
                            </div>
                          </div>
                        </div>
                      </div>,
                      <div
                        className="details-recipe"
                      >
                        <div
                          className="r-d-titles"
                        >
                          <b>
                            Recipe Details
                          </b>
                        </div>
                        <p />
                      </div>,
                    ],
                    "id": "recipe-content",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="row"
                        >
                          <div
                            className="col-md-8"
                          >
                            <img
                              alt=""
                              src={undefined}
                            />
                          </div>
                          <div
                            className="col-md-4"
                          >
                            <div
                              className="r-d-titles title-ing"
                            >
                              <b>
                                Ingredients:
                              </b>
                            </div>
                            <div
                              className="ing-body"
                            >
                              <p />
                            </div>
                            <div
                              id="popular-votes"
                            >
                              <li>
                                <Connect(authDeleteRecipe(Favorite))
                                  fav={undefined}
                                  favoriteRecipe={[MockFunction]}
                                  favorited={undefined}
                                  id=""
                                  userId={1}
                                />
                              </li>
                              <Connect(authDeleteRecipe(Vote))
                                downvotes={undefined}
                                id=""
                                upvotes={undefined}
                                vote={undefined}
                                voteRecipe={[MockFunction]}
                              />
                            </div>
                          </div>
                        </div>,
                        "id": "img-ing",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <div
                              className="col-md-8"
                            >
                              <img
                                alt=""
                                src={undefined}
                              />
                            </div>,
                            <div
                              className="col-md-4"
                            >
                              <div
                                className="r-d-titles title-ing"
                              >
                                <b>
                                  Ingredients:
                                </b>
                              </div>
                              <div
                                className="ing-body"
                              >
                                <p />
                              </div>
                              <div
                                id="popular-votes"
                              >
                                <li>
                                  <Connect(authDeleteRecipe(Favorite))
                                    fav={undefined}
                                    favoriteRecipe={[MockFunction]}
                                    favorited={undefined}
                                    id=""
                                    userId={1}
                                  />
                                </li>
                                <Connect(authDeleteRecipe(Vote))
                                  downvotes={undefined}
                                  id=""
                                  upvotes={undefined}
                                  vote={undefined}
                                  voteRecipe={[MockFunction]}
                                />
                              </div>
                            </div>,
                          ],
                          "className": "row",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": <img
                                alt=""
                                src={undefined}
                              />,
                              "className": "col-md-8",
                            },
                            "ref": null,
                            "rendered": Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "alt": "",
                                "src": undefined,
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "img",
                            },
                            "type": "div",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": Array [
                                <div
                                  className="r-d-titles title-ing"
                                >
                                  <b>
                                    Ingredients:
                                  </b>
                                </div>,
                                <div
                                  className="ing-body"
                                >
                                  <p />
                                </div>,
                                <div
                                  id="popular-votes"
                                >
                                  <li>
                                    <Connect(authDeleteRecipe(Favorite))
                                      fav={undefined}
                                      favoriteRecipe={[MockFunction]}
                                      favorited={undefined}
                                      id=""
                                      userId={1}
                                    />
                                  </li>
                                  <Connect(authDeleteRecipe(Vote))
                                    downvotes={undefined}
                                    id=""
                                    upvotes={undefined}
                                    vote={undefined}
                                    voteRecipe={[MockFunction]}
                                  />
                                </div>,
                              ],
                              "className": "col-md-4",
                            },
                            "ref": null,
                            "rendered": Array [
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": <b>
                                    Ingredients:
                                  </b>,
                                  "className": "r-d-titles title-ing",
                                },
                                "ref": null,
                                "rendered": Object {
                                  "instance": null,
                                  "key": undefined,
                                  "nodeType": "host",
                                  "props": Object {
                                    "children": "Ingredients:",
                                  },
                                  "ref": null,
                                  "rendered": "Ingredients:",
                                  "type": "b",
                                },
                                "type": "div",
                              },
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": <p />,
                                  "className": "ing-body",
                                },
                                "ref": null,
                                "rendered": Object {
                                  "instance": null,
                                  "key": undefined,
                                  "nodeType": "host",
                                  "props": Object {
                                    "children": undefined,
                                  },
                                  "ref": null,
                                  "rendered": null,
                                  "type": "p",
                                },
                                "type": "div",
                              },
                              Object {
                                "instance": null,
                                "key": undefined,
                                "nodeType": "host",
                                "props": Object {
                                  "children": Array [
                                    <li>
                                      <Connect(authDeleteRecipe(Favorite))
                                        fav={undefined}
                                        favoriteRecipe={[MockFunction]}
                                        favorited={undefined}
                                        id=""
                                        userId={1}
                                      />
                                    </li>,
                                    <Connect(authDeleteRecipe(Vote))
                                      downvotes={undefined}
                                      id=""
                                      upvotes={undefined}
                                      vote={undefined}
                                      voteRecipe={[MockFunction]}
                                    />,
                                  ],
                                  "id": "popular-votes",
                                },
                                "ref": null,
                                "rendered": Array [
                                  Object {
                                    "instance": null,
                                    "key": undefined,
                                    "nodeType": "host",
                                    "props": Object {
                                      "children": <Connect(authDeleteRecipe(Favorite))
                                        fav={undefined}
                                        favoriteRecipe={[MockFunction]}
                                        favorited={undefined}
                                        id=""
                                        userId={1}
                                      />,
                                    },
                                    "ref": null,
                                    "rendered": Object {
                                      "instance": null,
                                      "key": undefined,
                                      "nodeType": "class",
                                      "props": Object {
                                        "fav": undefined,
                                        "favoriteRecipe": [MockFunction],
                                        "favorited": undefined,
                                        "id": "",
                                        "userId": 1,
                                      },
                                      "ref": null,
                                      "rendered": null,
                                      "type": [Function],
                                    },
                                    "type": "li",
                                  },
                                  Object {
                                    "instance": null,
                                    "key": undefined,
                                    "nodeType": "class",
                                    "props": Object {
                                      "downvotes": undefined,
                                      "id": "",
                                      "upvotes": undefined,
                                      "vote": undefined,
                                      "voteRecipe": [MockFunction],
                                    },
                                    "ref": null,
                                    "rendered": null,
                                    "type": [Function],
                                  },
                                ],
                                "type": "div",
                              },
                            ],
                            "type": "div",
                          },
                        ],
                        "type": "div",
                      },
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": Array [
                          <div
                            className="r-d-titles"
                          >
                            <b>
                              Recipe Details
                            </b>
                          </div>,
                          <p />,
                        ],
                        "className": "details-recipe",
                      },
                      "ref": null,
                      "rendered": Array [
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": <b>
                              Recipe Details
                            </b>,
                            "className": "r-d-titles",
                          },
                          "ref": null,
                          "rendered": Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Recipe Details",
                            },
                            "ref": null,
                            "rendered": "Recipe Details",
                            "type": "b",
                          },
                          "type": "div",
                        },
                        Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": undefined,
                          },
                          "ref": null,
                          "rendered": null,
                          "type": "p",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`VotesSnapshot component should fully render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Vote
    downvotes={1}
    fav="false"
    favoriteRecipe={[MockFunction]}
    id={1}
    upvotes={1}
    vote={3}
    voteRecipe={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="btn btn-favorited"
          id="btn-thumbs-up"
          onClick={[Function]}
        >
          <li>
            <i
              aria-hidden="true"
              className="fa fa-thumbs-up"
            />
             
            1
          </li>
        </button>,
        <button
          className="btn btn-favorited"
          id="btn-thumbs-down"
          onClick={[Function]}
        >
          <li>
            <i
              aria-hidden="true"
              className="fa fa-thumbs-down"
            />
             
            1
          </li>
        </button>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <li>
            <i
              aria-hidden="true"
              className="fa fa-thumbs-up"
            />
             
            1
          </li>,
          "className": "btn btn-favorited",
          "id": "btn-thumbs-up",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <i
                aria-hidden="true"
                className="fa fa-thumbs-up"
              />,
              " ",
              1,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa fa-thumbs-up",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            " ",
            1,
          ],
          "type": "li",
        },
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <li>
            <i
              aria-hidden="true"
              className="fa fa-thumbs-down"
            />
             
            1
          </li>,
          "className": "btn btn-favorited",
          "id": "btn-thumbs-down",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <i
                aria-hidden="true"
                className="fa fa-thumbs-down"
              />,
              " ",
              1,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "aria-hidden": "true",
                "className": "fa fa-thumbs-down",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            " ",
            1,
          ],
          "type": "li",
        },
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="btn btn-favorited"
            id="btn-thumbs-up"
            onClick={[Function]}
          >
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-up"
              />
               
              1
            </li>
          </button>,
          <button
            className="btn btn-favorited"
            id="btn-thumbs-down"
            onClick={[Function]}
          >
            <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-down"
              />
               
              1
            </li>
          </button>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-up"
              />
               
              1
            </li>,
            "className": "btn btn-favorited",
            "id": "btn-thumbs-up",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-up"
                />,
                " ",
                1,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "className": "fa fa-thumbs-up",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              " ",
              1,
            ],
            "type": "li",
          },
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <li>
              <i
                aria-hidden="true"
                className="fa fa-thumbs-down"
              />
               
              1
            </li>,
            "className": "btn btn-favorited",
            "id": "btn-thumbs-down",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  aria-hidden="true"
                  className="fa fa-thumbs-down"
                />,
                " ",
                1,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "aria-hidden": "true",
                  "className": "fa fa-thumbs-down",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              " ",
              1,
            ],
            "type": "li",
          },
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
